Bug 348446 - folder-open and document-open icons are nearly or actually identical, depending on their size
Summary: folder-open and document-open icons are nearly or actually identical, dependi...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: Icons (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: visual-bugs-null
URL:
Keywords:
: 398927 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-30 11:50 UTC by André Marcelo Alvarenga
Modified: 2021-11-14 09:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (44.87 KB, image/png)
2015-05-30 11:51 UTC, André Marcelo Alvarenga
Details
Screenshot (29.41 KB, image/png)
2015-08-08 22:51 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2015-05-30 11:50:34 UTC
This dialog uses a Oxygen icon to choose the initial directory instead of a Breeze icon.

Reproducible: Always
Comment 1 André Marcelo Alvarenga 2015-05-30 11:51:09 UTC
Created attachment 92923 [details]
Screenshot
Comment 2 Kurt Hindenburg 2015-08-08 17:31:55 UTC
I don't have the same images are you - on mine they are different though.

The Edit Profiles uses:
 _ui->dirSelectButton->setIcon(QIcon::fromTheme(QStringLiteral("folder-open")));

The Settings uses:
KUrlRequester in settings/TabBarSettings.ui
Comment 3 André Marcelo Alvarenga 2015-08-08 22:50:36 UTC
(In reply to Kurt Hindenburg from comment #2)
> I don't have the same images are you - on mine they are different though.
> 
> The Edit Profiles uses:
>  _ui->dirSelectButton->setIcon(QIcon::fromTheme(QStringLiteral("folder-
> open")));
> 
> The Settings uses:
> KUrlRequester in settings/TabBarSettings.ui

I've tested with latest unstable Kubuntu: http://files.kde.org/snapshots/
See screenshot (similar icons).
Comment 4 André Marcelo Alvarenga 2015-08-08 22:51:21 UTC
Created attachment 93952 [details]
Screenshot
Comment 5 Nate Graham 2018-11-20 23:29:07 UTC
This isn't a problem with Konsole, it's an issue in with the Breeze icon theme: the folder-open and document-open icons are nearly identical.
Comment 6 Nate Graham 2021-10-28 20:08:19 UTC
*** Bug 398927 has been marked as a duplicate of this bug. ***